  for supplied text.

* The cite family of functions has been introduced.  These functions provide 
  quick pulling of quotes with citations (in Markdown or LaTeX format).  See 
  `?citeL` for more details.

* `md2docx` has been added for a conveinent way to convert an .md file to .docx.

* `tex2html` has been added for a conveinent way to convert a .tex file to .html.

MINOR FEATURES

* `html5` and `reveal.js` output now has a space between sections (slides)

* When initializing a prsentation .Rmd the date is dynamically set to use the 
  date of the `knit2html` call which of course can be set to be static (Yihui Xie).

* The colors red, orange, yellow, green, blue, indigo, violet and brown are now 
  available as background colors for `reveal.js`.

* `notes` is a function that allows the user to view a truncated version of the 
  notes located in the ARTICLES directory.

* A new template `wordpress_web` has been added.

IMPROVEMENTS

* `GQ`, `CA`, `LL` and `US` parse out both "fi" and "fl" ligatures more 
  effectively, whereas previously "fi" was assumed if a ligature was detected. 


CHANGES

`

reports 0.1.2
----------------------------------------------------------------
This is a bug fix release

BUG FIXES

* `GQ` did not handle block quotes correctly in what printed to the console.  
  This behavior has been corrected.

* `GQ`, `CA`, `LL` and `US` now parse out ligature "fi" as "fi" rather than "?".  
  Warnings were added for cases when liigatures are detected.

* Fixed the Description file for the basic_web template (missing info).

* `reveal.js` resulted in an error if a reference page was not supplied.   This 
  behavior has been corrected.

CHANGES

* `install_pandoc` is no longer exported as this functionality can be found in 
  the installr package


reports 0.1.1
----------------------------------------------------------------

* The first CRAN installation of the reports package
