@@ -76,3 +76,4 @@ Collate:
     'QC.R'
     'CITEhelper.R'
     'citeL.R'
+    'rdirs.R'
