@@ -21,6 +21,7 @@ export(possciteL)
 export(presentation)
 export(QC)
 export(QQ)
+export(rdirs)
 export(reveal.js)
 export(templates)
 export(tex2docx)
